[package]
name = "painrose-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
"Window",
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',] }
painrose_lib={path = "../painrose-lib"}

[lib]
crate-type = ["cdylib"]
